@@ -2,17 +2,19 @@
 Hash: SHA256
 
 DIST surround-2.0.tar.bz2 8285 SHA256 4203e827030ebcb782eb2c166b05888036ed060e1a2f2415878a1230041a495c SHA512 0e9eb05865300ef089217edac474908d0e73a2343069b9806523164a98506cff02a8f2b09425edf9c574f7b6173f57e66cc1017195e1d5aba57e25ac5afe087a WHIRLPOOL 5ba9a1ff43c5578289d2021ef1456d00db2b4c7a37371cf9da640d00fe82b254ff39cfe5763d05f757d67df343fd12c30a6da621dac00595fbafe6283b745de5
+DIST surround-2.1.tar.bz2 8441 SHA256 0bc6d088294e608fc0fee92af9aebea933b4e3aff441011786d19a11809b45dc SHA512 2b4283f77dac468ab91cdc941ac2dd5a2b99a35c23d6ffdc1e1c819a04bf45ecb934c5a111898ed45539a02d1f1ce6c702da80685f609944cbec9bdd25a1e22e WHIRLPOOL f21035d8829c4a41c47d339812769ec11337ae4125622058b1795135d0a77b81294385bd9149b410530407961c6f792dc9a83e8d8541f6d8683bf204a60b2dcb
 EBUILD surround-2.0.ebuild 465 SHA256 c959b79112d6bbe433b8ce371b833d31459ee7fb259d34016da592c9a66adde1 SHA512 b31822f74865eb41b0d9e77dcdd0c8b778a1db09e40a0f4dd4dc8f27d9a9fa4d4769e507a83d900c73cb518dac6c3213792f763d893b2f9ad3ba3514d11b6493 WHIRLPOOL 1a6a8f2091a8e161a22982f8a3ffcfed1c5fe268a213e24698b46119f7523c29d3c5fc75a17ddc90704f30a2a5c74c543ec437adb92423191dbeebc03fc38862
-MISC ChangeLog 1632 SHA256 d7b1dec5f9092ced6d8a461079886abfe1e0f5e084c390a18db3116a418b4a6f SHA512 ae015b128ab0f728633e4c9173786d129ec39f687b6e225aeaca53f02adc3140dcf7c014bb6c2dfcd441b0f21a2aedadf0563b00173eb5642dfcc4ba1eaa9548 WHIRLPOOL 4e27a7ae06bdd82751054fb0494aa3ba5b1bf98a99714d43c30a8ab3492cc41d34d930d72c6c7edea98d5608863b324fc8ffbc52fda08df8b3d107bfc8c6719b
+EBUILD surround-2.1.ebuild 469 SHA256 e43425852cf4925acac752475d438f61a550175bdcc301800e03a3fe0f05a638 SHA512 25a30701f52e9733cf78234a53d28ba74b28a626bc621dcb18a8a0239059074f00070b2ebe66ac09eabdd19966097829eb8a8cb3b700dd5bfe73d550a0b16ee4 WHIRLPOOL b5a30306b9eb46f2a7268b01d5645ab29f895d1d2e57b85982d06d8c6421eb7c2caf599aaf42a6d5151b2b37558d210d5a52ea2ae7a953aa6c7c1b56744f15ce
+MISC ChangeLog 1749 SHA256 2b7b76f383a319b84c5b8899d7a2aa7f785675cf2de6b18c7811222656713137 SHA512 45102956f8e413962391aefdb07da33d10fd2290cad56aeaea654c69c305db1e00cd7bc9a053c05ec7f08ea6c9630059c0d5c46762aa44040cf1c7a54e918758 WHIRLPOOL 6f5c9bc9918c5ba8b0250a6786e171bffb2871d47b1f46b1e92944345293e7eb5f88b86ea08d3c3df016f3366815e128fdfaf132e7f1dadbb67dfca08bb80f87
 MISC metadata.xml 157 SHA256 106c8618581360c66c2b535fcb7a6cb9ff318f1bd8e6c8f40f2f2f2d54e6787a SHA512 3b60e5c539f0940f297c22ce014cbecfbe31a7321c59384d9f1e8ee929b9685793b7231f49b2a153ddd1b89e3e5a56e5a304e11f321b28147ae47309a3272d70 WHIRLPOOL 22e97df7eb8669d9899254e880755052a8ef06dab300794173011b031a34c438bfc9de390e2a3bd2630927245c1055e789dd113078c2c6bafa7d4f723638a9d7
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2
 
-iQEcBAEBCAAGBQJRpQALAAoJEEqz6FtPBkyjPL8IAJQakJaOlRwXiaC7Djav15Sj
-ckidteqZ1WSd86Xhg9/2Tiwnj9oXbq4iZD624GNLnlmTG6dWMWIhy3RvlQeNZLa4
-ypfL76YhQYKbpexv28t5E8J+rptNnBNHh3RjPJk/IuBxh720GdIKs1S90nT+ppUC
-gTpZcCsl9WoE+NRUwHLzFKSIpjTZboWN8ymyJ/4VhJoHhnA3yLimf8FjGCbJp6h6
-ZVMmFLj5BFpavilfxEm5mpx5qXW8H5hv6mMzhvBeYnWx2EvyHF46p88Mpptydksx
-FfWLIOARctnVB1xz6PQg78o212AOGY1K8W7TfFKDWhRM3WEtJN2TmpuBzMW1rmQ=
-=XyAu
+iQEcBAEBCAAGBQJU1/ckAAoJEEqz6FtPBkyjVkkIAJ1cZc5CFXhYI2NV4vDmvh2u
+n2npEFEv7bIXm/6iXAJos1dg1b9IAEaoBYjqBvx9CcBeru4J9sQQEaxoOOTO3hq/
+MJZW/5OJBJrBig9tzvjU1JVuYJUMos601DqSH1D8jn6w57/apPpi+0UDi51quMq1
+otSwn1NKPgxC23Zc2C6tsRK3/OjAANmLKqBYmMMP970m2GC98ONqXJMK7QjLzCBj
+/5rpJ54i9I/mIrew+vBJtBiSp27LTzUSYN02M6QmDfQxRMs8keg8ltiMMDIADETy
+UaIS343Uxijg6clC1vaTmnHMXkF36N565T84gfaSf9qNhFDvEEqjZV4lHzR1KQs=
+=zhpW
 -----END PGP SIGNATURE-----
