@@ -1,0 +1,14 @@
+# Copyright 1999-2015 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/app-vim/surround/surround-2.1.ebuild,v 1.1 2015/02/08 23:53:57 radhermit Exp $
+
+EAPI="5"
+
+inherit vim-plugin
+
+DESCRIPTION="vim plugin: Delete/change/add parentheses/quotes/XML-tags/much more"
+HOMEPAGE="http://www.vim.org/scripts/script.php?script_id=1697"
+LICENSE="vim"
+KEYWORDS="~amd64 ~x86"
+
+VIM_PLUGIN_HELPFILES="${PN}.txt"
