@@ -7,18 +7,18 @@ DIST 4.0.2.zip 28261421 SHA256 90e49ccd92eddc019bcac3b914bf16ce8d49c59fc2bd165ee
 DIST 4.0.zip 23439392 SHA256 a698caf05f47a55c30e09d0aab053a412df683de2e139a6348156b03c502a0ec SHA512 02e366c2fa95ab5f37b0a66b94a5b56a632ef81e13febd982d6385cfaf7fa3edb4364180d4b8312e82bc7b8f150d02cde10248996f6a12286a20d684024aca20 WHIRLPOOL 0cb7b28b911111f4b7bf93c56f2dd31d080e7e0418fb53d9cc9093ca995d2c99a1fa7d5d82111e2c8db363e2b07384be39ec0062ab0252233f480b8e45e9304e
 EBUILD dolphin-3.5-r1.ebuild 3988 SHA256 e6bceabd745f06505ab114497e665e34927faa40e383fe2a3f637d3c84993557 SHA512 cd47aaed6efaa82298f9cbf1c7fe466b3be6d2cd2c6eecb095aef964847975b96468f2fdbe53a0b9b63a0fe3ba8354a91ace1df5a71328449e04748ed8f2fc70 WHIRLPOOL b29515fa86e025ad0751df7db5dbce285b482c2fb3f86311f0d75e5e699a8106026ecac55f64d5e150199f2a9b6f68bfd092d8a219a7c0379ecc1b1cb94ffd42
 EBUILD dolphin-4.0-r1.ebuild 3479 SHA256 71d1ce2409035d1609ee1cfd391fb8dd7a4efdcbd998372fe037502b47d9d52a SHA512 5a1eb2e46dfd953b69e0b601d6625cf921df8dfbf9a797332da3d01c6f8be3b2b57f1e3150ebdb3fe66ec75d053c5d4831dfe42606e2252dff1bd855c4027bf6 WHIRLPOOL f927358871ea326c6113a8d7bac9b88ff07918210d003c057b6b094fa462e412a83a8510eaee72e7051dc5087b88e6f219c92820ec0a50b28da27d934d0a133e
-EBUILD dolphin-4.0.2-r3.ebuild 3483 SHA256 fe053b9fccae2d0f93dc730502361a5f9086a0706720224712e7763254d043a3 SHA512 6cd84a487c0b555bd28cf22c527a77b604f49d78fb2b7304c1e9e0927e5f10e703c8568ec1a4857cba216764668ee166eab10578ea689704046abf217841e65e WHIRLPOOL a6c0296d0cde42f0acbe994a0df9eab88ef30ecab2d6bc8cd3a69ea5ec1251a9f9013b45ba0fb9d253a40d644f9667a9fff6907cc8762cd128f45aaee352c21c
-EBUILD dolphin-9999.ebuild 3865 SHA256 c84c492af8bb3605ddd6ea89beaaeb4fd49fb91d54b3ba78537b2ae9606c47ed SHA512 c535b6d1137640dff7a5d473088b5db854cb7cbea3d20dd2ca422f4b647209f72eca934b945dfca5bfa4b3c2089dd2feb9e3a4bf5229832ac72b306d54403a9e WHIRLPOOL 385a82f19b76a12774315a9cf69ee6a20687cbf201832ec22cb38b40c45e76b9a04e6ce5d2e1ef3a751b6e7bc8f3ce9e1c1b9bc624ff93ed07fa1f328809a64a
-MISC ChangeLog 4998 SHA256 2be57c4c9c2609d4ab3abc098edc3da9fa601b938bbeef28f3b46ac23c6bf2e3 SHA512 d86bc5dd14164a85352bad8222c399c7f640223223ff108d0e3213bc7206a9244f72e543c8b8ba3b0f817feb4222a0fe170cdf01f0e8c9620663771a0f542290 WHIRLPOOL 1454225605b23e83654edaa97f6f2a9219cd79245711739451304fa2678392e7d0fbdf6f175cd901f4a98bcfdeb555b956868ea0157b4f47385203271a13b65d
+EBUILD dolphin-4.0.2-r4.ebuild 3478 SHA256 5bce5578062a5e970af28fa29396d4f77f99eb37a7bd5058819b1f190ea7b4e8 SHA512 4733ebd9a70432a1895dd398d1666dfd0efeb53c30a6eaa5f5bcc9e093dacb77ced0fe85bafecea6255bc2a5200fbd991333b5da3daff14ed059fdcda0ffc6e9 WHIRLPOOL 10dd903dde3ebd2cda975a9670b375056ada250f60f6768d9837ceec63ed71bcc20168ee97a377461fe75110fd4a8ba555ecd90852b496121ce7261f015e4250
+EBUILD dolphin-9999.ebuild 3860 SHA256 d164cd0458c380f02bd164d9d8d41b3ec4eeebf21ab9e318614898b65a164c6c SHA512 9cd52ff746d69a4454a7a0bf50716fecf49e682e5edef9e009b60a94465207c483189cc7c49b3eea9032e18042b88a5469b4668773a49741655d92ee4c8d349a WHIRLPOOL 786ebc836586401d143f1e12db64aa02067ae8fd0793fc66b7ec6aa1808bc8a7c278148024e7cfd32ca7b67083c1ad0d9aba58c10c43dc146d77e7441193da33
+MISC ChangeLog 5224 SHA256 682356657647cda51da4539757fb731340915764b3a1ab01fc1e1c1cd514b5e1 SHA512 5f70afeb1f9619bce5115459d81f2f0c8651dd113a3c051e0cac4eb4a638e1988f6f7c81048b49a92e8f50f172b7c8a3c895ed21948a5dc611026c6e79f76763 WHIRLPOOL b5e216342f930b039f981317b8a86b92f4fb9d4fb38fbe25319e100150b9774edd36b7cf8b45e02cf8789e59fd14c6ca1c79fbfc16b30be1f5864e67f610e772
 MISC metadata.xml 442 SHA256 11ac55298ad628e589b592a2da00db1cabfd31ff8621c0fea059d714acdce334 SHA512 96abf53048bb8aea1387eacc40b9cda4e6099f079ddeb669fb23458d67880804fb015970207aa10a21227b87c153208a8dfa4bf4ea279ff7e53dcfebf18ac30e WHIRLPOOL e72458e354da2e4bfeb67de52c31d50a61f3b926fe16c0bcf4aae5e599858e413fcc9057fe1b098e43ee18fabe6a0f05dff008f59065cf34bad02da6480fc120
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJU1++2AAoJEEAKp6Qwg9Y3S1gH/AuWfBfoYrSgzGY0RwtC3B9w
-sDUU8jLiFfIL8azkljWmfRjiulztE65xTHUdbFTm7ejzFNKeaM7u+KmRtCz2caaV
-oVoJDgLxEhvYv6M31VX54bCe8ByZZIQ/7KgQSx1FwrpyCtrvTZw8qVHaNA101GJz
-Ae9w9e2s70EuFZPBjxBLLc9uzQog5IwOVvlDsiWDFzq6xzZcRcMA8ohqDIzrO9vy
-/q4fHZXfr6CtSpmp+egyF4ZcOwY/jcRfj2yxeHA2Px6yAOijnBBmHjmCOteY7Uqg
-1qMNd9qjrth8kl29ER/OsEyPYWPM89VeL4L+EoPgk7CiR+7aL8GfnumJPGbiQe0=
-=3hsi
+iQEcBAEBCAAGBQJU1/iPAAoJEEAKp6Qwg9Y3kK0H/R5N1i7zbnVVdBWL93uCMC4A
+r00+Uh8KMOHhZYfazrdEOjW7VksITnQeOpq6I/DIMyaTPm6iibGB4+mzdwmkOo0d
+FO3BNJwv1bwAF2VKWFD0xuUICCzOU/9pyH33JDk/mdkWnbK5Tz9LT929Z2FIyoBv
+sW5J3qwbNFgFGu2RxKPPkz3/wB1SBN3HynLYkliMWNnPvcUXI0IV8BBH/k6mYxvg
+a8ajZlu4h7BCO9gIGhI8jBWnJW/aWVGmBx6X9OGLW86RmAGmdIVheHv+E2xY03YF
+zfwrJIcjE21m8assCAwdEpMUrTVqbzaVWL8Reouw3QgM5mHL5YhBeveyvoxD2Lo=
+=9ty+
 -----END PGP SIGNATURE-----
