@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/games-emulation/dolphin/dolphin-9999.ebuild,v 1.20 2015/02/08 23:22:18 twitch153 Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-emulation/dolphin/dolphin-9999.ebuild,v 1.21 2015/02/09 00:00:07 twitch153 Exp $
 
 EAPI=5
 
@@ -70,22 +70,22 @@ src_prepare() {
 
 	# Remove automatic dependencies to prevent building without flags enabled.
 	if use !alsa; then
-		sed -i -e '/^include(FindALSA/d' CMakeLists.txt || die
+		sed -i -e '/include(FindALSA/d' CMakeLists.txt || die
 	fi
 	if use !ao; then
-		sed -i -e '/^check_lib(AO/d' CMakeLists.txt || die
+		sed -i -e '/check_lib(AO/d' CMakeLists.txt || die
 	fi
 	if use !bluetooth; then
-		sed -i -e '/^check_lib(BLUEZ/d' CMakeLists.txt || die
+		sed -i -e '/check_lib(BLUEZ/d' CMakeLists.txt || die
 	fi
 	if use !openal; then
-		sed -i -e '/^include(FindOpenAL/d' CMakeLists.txt || die
+		sed -i -e '/include(FindOpenAL/d' CMakeLists.txt || die
 	fi
 	if use !portaudio; then
 		sed -i -e '/CMAKE_REQUIRED_LIBRARIES portaudio/d' CMakeLists.txt || die
 	fi
 	if use !pulseaudio; then
-		sed -i -e '/^check_lib(PULSEAUDIO/d' CMakeLists.txt || die
+		sed -i -e '/check_lib(PULSEAUDIO/d' CMakeLists.txt || die
 	fi
 
 	# Remove ALL the bundled libraries, aside from:
