@@ -7,28 +7,22 @@ DIST mkvtoolnix-6.6.0.tar.xz 5174424 SHA256 cb1f965617fe064cf78457d3fbd0685eb31a
 DIST mkvtoolnix-7.3.0.tar.xz 5225524 SHA256 2cb09f926d16bfa8091a9f8fcbd63f6490bf1f2ce3280001f8d5c4798979d420 SHA512 e725d8bbc97ca0cef0e281f8cfb3477555640bef5ce31fc9cf62d1ce36b95b895cbe757d983a9081ca626025eef3f7ae9052e810d2541d98808e09a5793d2e8f WHIRLPOOL a2ff376e540e709d029cccfd77979971fa7987e475da6a2af9fdf0ee5a85fa4caa32c563baa7a43c94b9d5b5ee7f817ae331641af429aac77e5027c5cb0ea5b5
 DIST mkvtoolnix-7.4.0.tar.xz 5267412 SHA256 6bdfec2ca4fd7ce379660289c800be91fe963bfaf2f6e167fb11d9666d1640fe SHA512 2588281125c81be37eccc33b7277be0a0dff99b7aa8e820b68f4faecbd706b53a6363a54d427b5f36bfbdc773504e4de9e2ce187c271ee0142798db7e1a5fde8 WHIRLPOOL c878fdab9d99072bf514f968e0f697c5b73e2611ab7e27bdab80f8f6d32d331321b9697ac67f948842199eb68464726961c1064e4fc26bac62a3b6437dc60dc5
 DIST mkvtoolnix-7.5.0.tar.xz 5266996 SHA256 17baf799c7a047c9d7026db237b7e702029642e802e473f49764dccb7e3a5b4f SHA512 71aba9d3c3c6fb86f273701dc1d40125a41a63d7b6674f564ba3190ead53666db57a2af32e5710e89412e6251f34fcb53a6869ae6f5a42a2b22507d0db8ca8c6 WHIRLPOOL bb54ce3530743de8e16b8ef3430509d13e629fc84e889ef5298176d181c47484b2ec4138694e5523698ef7d7b66704033bd261364825511678d2a66297908d2f
+DIST mkvtoolnix-7.6.0.tar.xz 5304932 SHA256 74de3298133a491ad8b28868273635385c14b98156cc4195115da66c2c55dcd8 SHA512 13078ffbf3d749f592e2fb5a009f7fec479fb86599aaa9773b78c8a59e1383d0388bcf8abb7fd05b08e43ddd989d5f43eee8524be64f9e55fdf42f47d61a144c WHIRLPOOL 034885ccd14d0b8167cbeb8914050a38c68c0f519f1e560ed6dc41ba2ee8f305df7662ead9a83929639d45e28b7e58d2593822362a71aa68f0d4ea075d72c078
 EBUILD mkvtoolnix-6.6.0.ebuild 2124 SHA256 d85a5cf968972ea40fe08ae64e5c86a18e6ccbd62787a908f4e30524c5701d86 SHA512 b3c22836b30bdc1bfd60c4b4969ddfa09fa11fb57f3e6184a68ca4f398b4cead7d72cdb5df7394996c95e23b6c83a2373c838efda4d3b07d9c4064687dd70981 WHIRLPOOL 1dbcb589914de13a7b5631350abaa185f281ee47a309cad0c7816addbcbd07b8fbc6fd04f91d960072a7739e352bb5cd4dce634b4d676393a41af2462ced9009
 EBUILD mkvtoolnix-7.3.0.ebuild 2829 SHA256 2a5d60dbd2ae6e8d6d80a5bbd9fe528111d783e3e85fe8f38f32c3fcc5355aed SHA512 5886347781106926d94ef6fa4106692ecd299f9b491429bbccef6344eae9e364a40d72393420c437f4001242ce91a6246c1bae1813f26d26eb81663c8c3574d5 WHIRLPOOL 7c70d5e5ac4b965e1faadc00858c3fdd7a520fa105d2f9a3bdbd11fefb47eadac3278299a4b109187977821a33e9d06d47e405ec401d3368876d15fe2287f05e
 EBUILD mkvtoolnix-7.4.0-r1.ebuild 2822 SHA256 1da6ab90ee31b8e6763446f099467fce1a22061f00a9caadfc2abd28c84aaadb SHA512 52eef643f6a65e367914c78ba6523cb4f05b5e0628b3d99d6212c03d219a823de495d73529124b1459fc959c60977b5d271d5d1ec84a5da0c0ed4f3e180625b7 WHIRLPOOL 01b165eb0fffe95f88b9bf32b5efcd40e0a5bc1913f1d1848569359cfdb72c50afb5904a75878aea9f5c8fc654f8714fef795820563de01c704ed5f8ffe07125
-EBUILD mkvtoolnix-7.5.0.ebuild 3107 SHA256 b1d5b0b8c4571831ab308572a18d8ca07881fb98f97e526faeb32b937e6994f1 SHA512 3f7d5200b7c29957da8336197d96e5748b40cdb0a112e964046cde96df3de6b291543b2819c9469d94d81c210359bbd91dd27fa23f68e28c9e23509c32dbef45 WHIRLPOOL e5ec09632f46b736599bb617601d879e95195294d3b6f2526bf3d8c5a5b4cf53a40d94a16f490cd289043f11ff1e2bd0692ff2f756d36b8f85991812e0a07df4
-MISC ChangeLog 31525 SHA256 48d9a1199bb80134e429fb86550e2013e69fdbaec9d157a8af2b9563d5a6a5f6 SHA512 f9a58ef299c865e824dff68e8c7a7013d7216d92769b2b256a82dc53239bdc7fb71873b81395f794ad19161e6f03585ada6ac54a87abae2f89bc898b5ae57863 WHIRLPOOL 0b1f0ff2feb9d3982808437529f95ca4a79a2e0b2ddef17caca8dfed133c5d7bbf5e0f310b07ee0e6ab6cf3eb9a096cad19e23fe38acbbfaca75e1d6a21f44e6
+EBUILD mkvtoolnix-7.5.0.ebuild 3127 SHA256 f36788f37c132e459ff9b14e961508ee3b4ede25b1898bc195932e8c7714395f SHA512 2a94337179659c17dfaf478df7773fbc2d0453daaecbb339351adc74b61dfa2585e0b1d0243b8815d43cd96b8aa0f8a0ee40c6efd93ca47c6b732272bd92eca3 WHIRLPOOL 89153ef5b18301f5236e9328e7bd7476ef869a0c0cda289a1de3e7e3c56702e6a7fbfee482902a7f9513438d71fa36426981f936722d6e376b0c53adbcd812b8
+EBUILD mkvtoolnix-7.6.0.ebuild 3127 SHA256 af880186f346b0881015eedc39e45b8f7d11cb674c26d4938cd8b2b6aea676dd SHA512 df298111b57e8489978b66f159445bba2136f637d7480c85ba4e4b4547984bcd980f92b00354308addb196f3c31c8c56402ac343efd28d3c44f581c3707db7be WHIRLPOOL cec2f3a1db65c3c914d7ac8b36bed04f0cb21ba0ddc0c8fe4a7fabf6b222c4c7acea57bebd7848417f0f7ff3f5b994023abd7f4ccee3a69da9e172051b7959f9
+MISC ChangeLog 31763 SHA256 d01a63818d022c91f6e41d7121e8c0de3924a453f1978f819bc81f5754429f82 SHA512 22d51930508377df58194988f8739f4cfa426e1c94f9b6bdefedefcde963f9f27f477a5bc61cd99835458a1d40ecfe7fddcd5da474b979a06d05e232a6a3913d WHIRLPOOL 1ad3e5eab5d884a6c8167febe68ae0749a48b9a1cd60d93ee6ae7cdfc4bbbdc4314a4dc8cfa292ece1c2296b77fc1c623036a4a726a920f11d41d383f8bd0653
 MISC metadata.xml 158 SHA256 f9dd4fb4a7f368e776ea0d7d394dad8f3a674e67f6103d6fb58a8a98971eeee4 SHA512 0bfb0265d3c42ba1958f8e589316112dba381e7701773668443cf0afe678a8d80675392efb2713e3d376b85b03a5b2bfb390c94411e0c6cf8a223b26aa9a04ca WHIRLPOOL 447b37b9f46058b1adc8d30a57460a8ab6b5ec149870c5ea385956cae9dd10a99b36e63526f2d13cabf13a4185f8b4e22a78156ab141a6e397bba298ab7efb2a
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0
+Version: GnuPG v2
 
-iQJ8BAEBCABmBQJUzOZRXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ5MTlDREQ0NUU5Mjc4RkU2RjJDNTAyNzU0
-RkRGOUNGRDJGQUM1MTRFAAoJEE/fnP0vrFFOvEoP/2OvjeEYbXaYI6HiB/f0jqb/
-DnimR/1eS01LSGqr3Z/NVOmVzLtvSO7gDNdZW2WGUfMzeP7fy4M7Z7cyYSBILx8U
-cgk7iPkQtDP+f4ZRRPRShKJxYzyZj17VzUoD4W/e21WWMiOgvQbuSqmzT+Vq1Ks9
-mjaGFWx8RTwHkbH8tRlvHzwOcGkjAmVyzVQ4V55KqVIUl6dxFhyVNKY8b88b5Oby
-dU3jjP7C+FxVlAYfMQOD0tgFYc5jA/YtupUH+bA6PQS9ZW4LXODNhPd2UZhjMJZl
-Tup06Mw56p1mThkmoI+rWU64iP8u7lYytEpWy6NvI9qAaYoFKFqA/k0ej9MBpbTW
-VArYzc7e/07frml7dmAK3xnAGxqDx0EuWhtcF7es+97a9rZdmGKtgmgnH1HcA0lI
-mSaawNyomfH1+UFC1nzDQVCs42exIcgUDsqI4lACx26lpIiHDrQoEoKM/fP2cZBf
-v6ch3px248Q717j4v8urtWALXVWZb227Iq1IndEjM/JYB8LIeH3MZ+ME5JZb1n+O
-KaQD3mKfNQz5MfBJjgvlje1XhZEkiOKLhXClCiNQ4f+TDwh/hgjC14NwI3LtoRoT
-uJtF26oOK890cBReOk6GRFnFkZfX654HEQUpKLV//jcjnYIYjSrRZwwQ0mw+LaDE
-kDmTAqgOxr1YIoBxwdhD
-=fp60
+iQEcBAEBCAAGBQJU1/dHAAoJEEqz6FtPBkyj4oUH/RiXvJfKXH+vBORjEZz5ESpn
+H8yhAJKeWxY3Vy1xQX/uEzS8Vq6aQ8jcxfdqEEN2J6vOYarl2D7Ok5+i6x5nPTKA
+x4mUoiCVyf7650Eqs0J/Vq93IpJGIp3WeeNnpSLYzBAltfqGZPfGtPoKoa8b3yER
+DwrYcgaTR5L5Vg/GxEGCVMnATRj8Fuf3uKRqO2t1ngiqrQoxxqgdZcgGQ7H4dJvp
+TQqiyomtlaxC5OW1P70ylPjbxBLQm55oRORc+p/yE+h1tyIo11dzTREmXt0WWKHQ
+rkiegZ52NlEIGtymVIDWlXxuJTtG9AR2iWx3LxyuVZiPRh5QvjgsftOfUsjcTKY=
+=0PBE
 -----END PGP SIGNATURE-----
