@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/mkvtoolnix/mkvtoolnix-7.5.0.ebuild,v 1.5 2015/02/08 23:45:37 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/mkvtoolnix/mkvtoolnix-7.6.0.ebuild,v 1.1 2015/02/08 23:54:40 radhermit Exp $
 
 EAPI=5
 WX_GTK_VER="3.0"
