@@ -1,0 +1,12 @@
+DEFINED_PHASES=install postinst postrm
+DEPEND=|| ( >=app-editors/vim-7.3 >=app-editors/gvim-7.3 )
+DESCRIPTION=vim plugin: Delete/change/add parentheses/quotes/XML-tags/much more
+EAPI=5
+HOMEPAGE=http://www.vim.org/scripts/script.php?script_id=1697
+KEYWORDS=~amd64 ~x86
+LICENSE=vim
+RDEPEND=|| ( >=app-editors/vim-7.3 >=app-editors/gvim-7.3 )
+SLOT=0
+SRC_URI=mirror://gentoo/surround-2.1.tar.bz2 http://dev.gentoo.org/~radhermit/vim/surround-2.1.tar.bz2
+_eclasses_=vim-doc	1c18baeec98cec3287524cbf2fee2bd2	vim-plugin	286547e90fbbc4c841eee80cd73e646c
+_md5_=d994dad657d18146b334a4a549542c6d
