@@ -8,6 +8,6 @@ KEYWORDS=~amd64 ~ppc ~ppc64 ~x86 ~x86-fbsd ~amd64-linux ~x86-linux
 LICENSE=GPL-2
 RDEPEND=>=dev-libs/libebml-1.3.1:= >=media-libs/libmatroska-1.4.2:= >=dev-libs/boost-1.46.0:= dev-libs/pugixml media-libs/flac media-libs/libogg media-libs/libvorbis sys-apps/file >=sys-devel/gcc-4.6 sys-libs/zlib qt5? ( dev-qt/qtcore:5 dev-qt/qtgui:5 dev-qt/qtwidgets:5 ) wxwidgets? ( x11-libs/wxGTK:3.0[X] )
 SLOT=0
-SRC_URI=http://www.bunkus.org/videotools/mkvtoolnix/sources/mkvtoolnix-7.5.0.tar.xz
+SRC_URI=http://www.bunkus.org/videotools/mkvtoolnix/sources/mkvtoolnix-7.6.0.tar.xz
 _eclasses_=autotools	8fc2dd333ef9346c906ffd9a523d8211	eutils	998e5931fb95b10a6a11ec796ada2759	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	versionator	cd0bcdb170807e4a1984115e9d53a26f	wxwidgets	6d6eec2685256d35511e7b6d5461bec9
-_md5_=90385bc4163b82cd113fc37eb6f77f4a
+_md5_=8c3599e15c8f2c4c954b81af17a1a913
