@@ -1,6 +1,12 @@
 # ChangeLog for games-emulation/dolphin
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-emulation/dolphin/ChangeLog,v 1.29 2015/02/08 23:22:18 twitch153 Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-emulation/dolphin/ChangeLog,v 1.30 2015/02/09 00:00:07 twitch153 Exp $
+
+*dolphin-4.0.2-r4 (09 Feb 2015)
+
+  09 Feb 2015; Devan Franchini <twitch153@gentoo.org> +dolphin-4.0.2-r4.ebuild,
+  -dolphin-4.0.2-r3.ebuild, dolphin-9999.ebuild:
+  Modifies sed regexs to remove optional features, bug #539148
 
 *dolphin-4.0.2-r3 (08 Feb 2015)
 *dolphin-3.5-r1 (08 Feb 2015)
