@@ -1,6 +1,14 @@
 # ChangeLog for media-video/mkvtoolnix
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/mkvtoolnix/ChangeLog,v 1.214 2015/01/31 14:27:20 yngwin Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/mkvtoolnix/ChangeLog,v 1.216 2015/02/08 23:54:40 radhermit Exp $
+
+*mkvtoolnix-7.6.0 (08 Feb 2015)
+
+  08 Feb 2015; Tim Harder <radhermit@gentoo.org> +mkvtoolnix-7.6.0.ebuild:
+  Version bump.
+
+  08 Feb 2015; Tim Harder <radhermit@gentoo.org> mkvtoolnix-7.5.0.ebuild:
+  Use array for configure options.
 
   31 Jan 2015; Ben de Groot <yngwin@gentoo.org> mkvtoolnix-7.5.0.ebuild:
   Point directly to Qt5 tools to fix bug #532600, and actually build
