@@ -1,6 +1,11 @@
 # ChangeLog for app-vim/surround
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-vim/surround/ChangeLog,v 1.13 2013/05/28 19:05:46 radhermit Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-vim/surround/ChangeLog,v 1.14 2015/02/08 23:53:57 radhermit Exp $
+
+*surround-2.1 (08 Feb 2015)
+
+  08 Feb 2015; Tim Harder <radhermit@gentoo.org> +surround-2.1.ebuild:
+  Version bump.
 
   28 May 2013; Tim Harder <radhermit@gentoo.org> -surround-1.90.ebuild:
   Remove old.
